changeing for spacing issue

--- a/siteFiles/css/2-bodyElementstyles.css
+++ b/siteFiles/css/2-bodyElementstyles.css
@@ -7,7 +7,7 @@
  */
 
 body {
-  background-color: #10fde9;
+  background-color: #0ab8a9;
 }
 
 a {
@@ -35,7 +35,7 @@ li {
   font-size: 200%;
   text-align: center;
   color: #2b6777;
-
+  margin-bottom: 30px;
   font-family: fantasy;
   border: #1100fa;
   border-style: double;
