--- a/siteFiles/css/contact.css
+++ b/siteFiles/css/contact.css
@@ -1,9 +1,16 @@
+*body {
+  margin: 0;
+  padding: 0;
+  width: 100%; /* full window width */
+  text-align: center;
+}
+)
 .contactPageBackground {
   background-color: rgb(61, 255, 236);
 }
 .responsive-Mobile-Grid {
   display: grid;
-  grid-template-columns: repeat(auto-fit, 30rem);
+  grid-template-columns: repeat(auto-fit, 27.77rem);
   justify-content: center;
 }
 
@@ -14,7 +21,7 @@
   text-align: center;
   border-radius: 1rem;
   position: relative;
-  margin: 0.5rem;
+  margin: 2%;
 }
 .profile-img {
   width: 100%;
@@ -30,7 +37,7 @@
   font-family: fantasy;
   font-size: larger;
   text-align: left;
-  padding-left: 30px;
+  padding-left: 10%;
 }
 
 .contactLabel,
